[package]
name = "laminar-inspect"
version = "0.2.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { version = "0.8.0-rc5" }
sc-client-api = { version = "2.0.0-rc5" }
sc-service = { version = "0.8.0-rc5", default-features = false }
sp-blockchain = { version = "2.0.0-rc5" }
sp-core = { version = "2.0.0-rc5" }
sp-runtime = { version = "2.0.0-rc5" }
structopt = "0.3.8"
