[package]
name = "laminar-primitives"
version = "0.3.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
bitmask = { version = "0.5.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
	"bitmask/std",
	"codec/std",
	"serde",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
