[package]
name = "laminar-primitives"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
bitmask = { version = "0.5.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-arithmetic = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"bitmask/std",
	"codec/std",
	"serde",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
