[package]
name = "laminar-rpc"
version = "0.3.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
jsonrpc-core = "14.0.3"
jsonrpc-pubsub = "14.2.0"
primitives = { package = "laminar-primitives", path = "../primitives" }
sp-api = { version = "2.0.0-rc6" }
sp-blockchain = { version = "2.0.0-rc6" }
sp-block-builder = { version = "2.0.0-rc6" }
sp-consensus = { version = "0.8.0-rc6" }
sp-consensus-babe = { version = "0.8.0-rc6" }
sp-transaction-pool = { version = "2.0.0-rc6" }
sc-client-api = { version = "2.0.0-rc6" }
sc-consensus-babe = { version = "0.8.0-rc6" }
sc-consensus-babe-rpc = { version = "0.8.0-rc6" }
sc-consensus-epochs = { version = "0.8.0-rc6" }
sc-finality-grandpa = { version = "0.8.0-rc6" }
sc-finality-grandpa-rpc = { version = "0.8.0-rc6" }
sc-keystore = { version = "2.0.0-rc6" }
sc-rpc = { version = "2.0.0-rc6" }
substrate-frame-rpc-system = { version = "2.0.0-rc6" }
pallet-transaction-payment-rpc = { version = "2.0.0-rc6" }
dev-runtime = { path = "../runtime/dev" }
orml-oracle-rpc = { path = "../orml/oracle/rpc" }
margin-protocol-rpc = { path = "../modules/margin-protocol/rpc" }
synthetic-protocol-rpc = { path = "../modules/synthetic-protocol/rpc" }
