[package]
name = "laminar-rpc"
version = "0.3.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
jsonrpc-core = "15.0.0"
primitives = { package = "laminar-primitives", path = "../primitives" }
sp-api = { version = "2.0.1" }
sp-blockchain = { version = "2.0.1" }
sp-block-builder = { version = "2.0.1" }
sp-runtime = { version = "2.0.1" }
sp-consensus = { version = "0.8.1" }
sp-consensus-babe = { version = "0.8.1" }
sp-transaction-pool = { version = "2.0.1" }
sc-client-api = { version = "2.0.1" }
sc-consensus-babe = { version = "0.8.1" }
sc-consensus-babe-rpc = { version = "0.8.1" }
sc-consensus-epochs = { version = "0.8.1" }
sc-finality-grandpa = { version = "0.8.1" }
sc-finality-grandpa-rpc = { version = "0.8.1" }
sc-keystore = { version = "2.0.1" }
sp-keystore = { git = "https://github.com/paritytech/substrate", rev = "f884296f7436916909025f8b43c4bbf3e60e4c60" }
sc-rpc = { version = "2.0.1" }
substrate-frame-rpc-system = { version = "2.0.1" }
pallet-transaction-payment-rpc = { version = "2.0.1" }
dev-runtime = { path = "../runtime/dev" }
orml-oracle-rpc = { path = "../orml/oracle/rpc" }
margin-protocol-rpc = { path = "../modules/margin-protocol/rpc" }
synthetic-protocol-rpc = { path = "../modules/synthetic-protocol/rpc" }
